...
            HStack(spacing: 0) {
                Image(systemName: "magnifyingglass")
                    .foregroundStyle(
                        isFocusedOnSearchBar || speechRecogniser.isRecording ? Color.mycolor.myAccent : Color.mycolor.mySecondary
                    )

                TextField("Search here ...", text: $vm.searchText)
                    .foregroundStyle(Color.mycolor.myAccent)
                    .autocorrectionDisabled(true)
                    .keyboardType(.asciiCapable)
                    .frame(height: isFocusedOnSearchBar ? 50 : 35)
                    .focused($isFocusedOnSearchBar)
                    .submitLabel(.search)
...
                        speechRecogniser.isRecording
                        ? .easeOut(duration: 1.0).repeatForever(autoreverses: false)
                        : .default,
                        value: speechRecogniser.isRecording
                    )

                Image(systemName: speechRecogniser.isRecording ? "stop.circle" : "mic")
                    .font(isFocusedOnSearchBar ? .title : .body)
                    .foregroundStyle(
                        speechRecogniser.isRecording ? Color.mycolor.myRed : Color.mycolor.mySecondary
                    )
                    .padding(8)
            }
...
